BuildHughes/translation-tool/inputs/source_meta/objects/CP_Templates__c.object
<CustomObject>
    <description>This Object is used to Store templates for communication preferences.</description>
    <fields>
        <fullName>CP_Email_Template_Name__c</fullName>
        <label>Email Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Event_Display_Name__c</fullName>
        <label>Event Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Event_Name__c</fullName>
        <label>Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>en_US</fullName>
                </value>
                <value>
                    <fullName>es_AR</fullName>
                </value>
                <value>
                    <fullName>pt_BR</fullName>
                </value>
                <value>
                    <fullName>es_CO</fullName>
                    <default>true</default>
                    <label>es_CO</label>
                </value>
                <value>
                    <fullName>es_PA</fullName>
                </value>
                <value>
                    <fullName>es_CL</fullName>
                </value>
                <value>
                    <fullName>es_EC</fullName>
                </value>
                <value>
                    <fullName>es_PE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Preference_Key__c</fullName>
        <formula>if(Not(ISBLANK(CP_Event_Name__c)),
   Preference_Unique_Name__c &amp;&apos;~&apos;&amp; CP_Event_Name__c,
    Preference_Unique_Name__c)</formula>
        <label>Event Preference Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If template is active and being used</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preference_Unique_Name__c</fullName>
        <label>Preference Unique Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_Template__c</fullName>
        <label>SMS Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Template Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Preference_Unique_Name__c</columns>
        <columns>CP_Event_Name__c</columns>
        <columns>SMS_Template__c</columns>
        <columns>CP_Email_Template_Name__c</columns>
        <columns>CP_Language__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>CP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>